[gd_scene load_steps=16 format=3 uid="uid://pbajyt5rau55"]

[ext_resource type="Script" uid="uid://15syv8o8wym5" path="res://scripts/stone_lightning.gd" id="1_olx2o"]
[ext_resource type="Texture2D" uid="uid://0og8o0vgfwhs" path="res://assets/stone.png" id="2_olx2o"]
[ext_resource type="AudioStream" uid="uid://cglg0mtqkxgdn" path="res://assets/chain_shoot.mp3" id="3_aq3m8"]
[ext_resource type="Texture2D" uid="uid://lvlwjghy54kk" path="res://addons/kenney_particle_pack/flare_01.png" id="4_aq3m8"]
[ext_resource type="Texture2D" uid="uid://bpq2ygfv2if5r" path="res://assets/lightning.png" id="5_qaqyk"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_wc8uc"]
friction = 0.8
bounce = 0.2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4liqn"]
size = Vector2(70, 220)

[sub_resource type="CircleShape2D" id="CircleShape2D_wc8uc"]
radius = 4.12311

[sub_resource type="CircleShape2D" id="CircleShape2D_hd0w3"]
radius = 4.2

[sub_resource type="Gradient" id="Gradient_wk5ic"]
offsets = PackedFloat32Array(0, 0.536667)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_lryld"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 1), 0.0, 0.0, 0, 0, Vector2(0.99999, -1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Animation" id="Animation_olx2o"]
resource_name = "lightning_strike"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lightning_root/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lightning_root/Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_aq3m8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lightning_root/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lightning_root/Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qaqyk"]
_data = {
&"RESET": SubResource("Animation_aq3m8"),
&"lightning_strike": SubResource("Animation_olx2o")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_olx2o"]
size = Vector2(8, 8)

[node name="stone_lightning" type="RigidBody2D" groups=["stone"]]
collision_layer = 32780
collision_mask = 2
physics_material_override = SubResource("PhysicsMaterial_wc8uc")
gravity_scale = 0.6
continuous_cd = 1
script = ExtResource("1_olx2o")

[node name="lightning_root" type="Marker2D" parent="."]
position = Vector2(0, 1)

[node name="Sprite2D" type="Sprite2D" parent="lightning_root"]
position = Vector2(0, -100)
texture = ExtResource("5_qaqyk")
hframes = 5

[node name="lightning" type="Area2D" parent="lightning_root"]
position = Vector2(0, -1)
collision_layer = 32783
collision_mask = 32783

[node name="CollisionShape2D" type="CollisionShape2D" parent="lightning_root/lightning"]
position = Vector2(-2, -101)
shape = SubResource("RectangleShape2D_4liqn")

[node name="stone" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_olx2o")
offset = Vector2(-3, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wc8uc")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32783
collision_mask = 32783

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_hd0w3")

[node name="chain" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_aq3m8")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
visible = false
modulate = Color(3, 3, 7, 1)
amount = 100
texture = ExtResource("4_aq3m8")
lifetime = 0.09
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 0.37
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 100)
initial_velocity_min = 105.56
initial_velocity_max = 105.56
scale_amount_min = 0.01
scale_amount_max = 0.03
color_ramp = SubResource("Gradient_wk5ic")
hue_variation_curve = SubResource("Curve_lryld")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qaqyk")
}
speed_scale = 3.0

[node name="Ground_detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground_detect"]
shape = SubResource("RectangleShape2D_olx2o")

[connection signal="body_entered" from="lightning_root/lightning" to="." method="_on_lightning_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Ground_detect" to="." method="_on_ground_detect_body_entered"]
